--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
-langchain
-langchain-openai
+langchain>=0.1.0
 langchain-community
+langchain-core
+langchain-openai
 langchain-chroma
 langchain-text-splitters
 chromadb
