--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
-langchain>=0.1.0
+langchain
 langchain-community
-langchain-core
 langchain-openai
 langchain-chroma
-langchain-text-splitters
 chromadb
 openai
 tiktoken
